--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</h2>
 				</div>
 				<div id="nota">
-					<h2 id="tiempo"></h2>
+					<h2 id="tiempo">&nbsp;</h2>
 					<h2>Cuando escuches el sonido...<br><br>
 						Haz una inspiración de 6 segundos<br>
 						y después di mentalmente: <br><br>
