--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 					<h2>Cuando escuches el sonido...<br><br>
 						Haz una inspiración de 6 segundos<br>
 						y después di mentalmente: <br><br>
-						"Soy consciente de que pienso"<br>
-						"Soy consciente de que siento"<br><br>
+						"Prudencia"<br>
+						"Compasión"<br><br>
 						Pregúntate ¿qué depende de mí ahora mismo?
 					</h2>
 				</div>
