--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				margin-top: 40px;
 				margin-left: auto;
 				margin-right: auto;
+				border-radius: 5px;
 			}
 			#btn1,#btn2 {
 				display: block;
