--- a/index.html
+++ b/index.html
@@ -9,28 +9,29 @@
 			body {
 				background: rgb(12, 114, 239);
 				font-family: 'Arial', sans-serif;
+				font-size: 16px;
 			}
 			h2{ text-align: center; }
 			#contenedor {
 				background: white;
-				padding-top: 40px;
-				padding-bottom: 20px;
-				max-width:900px ;
-				min-height: 500px;
-				margin-top: 40px;
+				padding-top: 2.5em;
+				padding-bottom: 1.25em;
+				max-width:56.25em ;
+				min-height: 31.25em;
+				margin-top: 2.5em;
 				margin-left: auto;
 				margin-right: auto;
-				border-radius: 5px;
+				border-radius: 0.3125em;
 			}
 			#btn1,#btn2 {
 				display: block;
 				margin:auto;
 			}
 			#btn2 {display:none;}
-			button { padding:10px;}
+			button { padding:0.625em;}
 			#nota{
 				display: none;
-				padding-top: 40px;
+				padding-top: 2.5em;
 			}
 			#primero {
 				text-align: center;
