--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
 				<div id="nota">
 					<h2 id="tiempo">&nbsp;</h2>
 					<h2>Cuando escuches el sonido...<br><br>
-						Haz una inspiración de 6 segundos<br>
-						y después di mentalmente: <br><br>
-						"Prudencia"<br>
-						"Compasión"<br><br>
-						Pregúntate ¿qué depende de mí ahora mismo?
+						Haz una inspiración profunda<br>
+						y di mentalmente muestras inspiras: <br><br>
+						"Prudencia y compasión"<br><br>
+						Cuando expires di mentalmente<br>
+						"Prudencia y compasión"<br><br>
+						al echar el aire Pregúntate<br> 
+						¿qué depende de mí ahora mismo?
 					</h2>
 				</div>
 			</section>
