--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 					<h2 id="tiempo">&nbsp;</h2>
 					<h2>Cuando escuches el sonido...<br><br>
 						Haz una inspiración profunda<br>
-						y di mentalmente muestras inspiras: <br><br>
-						"Prudencia y compasión"<br><br>
+						y di mentalmente miestras inspiras: <br>
+						"Prudencia y compasión"<br>
 						Cuando expires di mentalmente<br>
 						"Prudencia y compasión"<br><br>
 						al echar el aire Pregúntate<br> 
