--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			}
 			#primero {
 				text-align: center;
-			}	
+			}
+			.color { color:red;}	
 		</style>
 	</head>
 	<body>
@@ -56,10 +57,10 @@
 					<h2 id="tiempo">&nbsp;</h2>
 					<h2>Cuando escuches el sonido...<br><br>
 						Haz una inspiración profunda<br>
-						y di mentalmente miestras inspiras: <br>
-						"Prudencia y compasión"<br>
-						Cuando expires di mentalmente<br>
-						"Prudencia y compasión"<br><br>
+						y di mentalmente miestras <span class="color">"inspiras: <br>
+						"Prudencia y compasión"</span><br>
+						Cuando <span class="color">expires</span> di mentalmente<br>
+						<span class="color">"Prudencia y compasión"</span><br><br>
 						al echar el aire Pregúntate<br> 
 						¿qué depende de mí ahora mismo?
 					</h2>
