--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<h2 id="tiempo">&nbsp;</h2>
 					<h2>Cuando escuches el sonido...<br><br>
 						Haz una inspiración profunda<br>
-						y di mentalmente miestras <span class="color">"inspiras: <br>
+						y di mentalmente miestras <span class="color">inspiras: <br>
 						"Prudencia y compasión"</span><br>
 						Cuando <span class="color">expires</span> di mentalmente<br>
 						<span class="color">"Prudencia y compasión"</span><br><br>
