--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
 					<h2>Cuando escuches el sonido...<br><br>
 						Haz una inspiración profunda<br>
 						y di mentalmente miestras <span class="color">inspiras: <br>
-						"Prudencia y compasión"</span><br>
+						"¿qué depende de ti?"</span><br>
 						Cuando <span class="color">expires</span> di mentalmente<br>
-						<span class="color">"Prudencia y compasión"</span><br><br>
-						al echar el aire Pregúntate<br> 
-						¿qué depende de mí ahora mismo?
+						<span class="color">"se buena persona"</span><br><br>
 					</h2>
 				</div>
 			</section>
