--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 					<h2>Cuando escuches el sonido...<br><br>
 						Haz una inspiración profunda<br>
 						y di mentalmente mientras <span class="color">inspiras: <br>
-						"¿qué depende de ti?"</span><br>
+						"Prudencia y compasión"</span><br>
 						Cuando <span class="color">expires</span> di mentalmente<br>
-						<span class="color">"se buena persona"</span><br><br>
+						<span class="color">"¿Qué depende de ti?"</span><br><br>
 					</h2>
 				</div>
 			</section>
